feat: comprehensive optimization - security, performance, UX, code quality
Phase 5 - Code Quality:
- Split App.tsx from 1158 lines to ~170 lines
- Created 4 page components (Dashboard, History, Log, Auth)
- Added SharedComponents.tsx for reusable UI
- Created shared/types.ts for frontend/backend type sharing

Phase 3 - Security:
- Upgraded password hashing from SHA-256 to PBKDF2-SHA256
- Added automatic hash migration on login
- Implemented rate limiting (login: 5/min, register: 10/hr, insights: 3/min)
- Added input validation for username

Phase 1 - Performance:
- Added AI insights caching with KV (24hr TTL)
- Created /api/stats endpoint for aggregated dashboard data

Phase 2 - User Experience:
- Added PWA support (manifest.json, sw.js)
- Added service worker for offline caching
- Created /api/export endpoint (JSON/CSV download)

Phase 4 - Reliability:
- Added /api/health endpoint for D1/KV status monitoring

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>IntimDiary</title>
+  <meta name="description" content="Private intimacy wellness tracker" />
+  <meta name="theme-color" content="#f43f5e" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="IntimDiary" />
   <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+  <link rel="manifest" href="/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -185,6 +192,16 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
+  <script>
+    // Register Service Worker for PWA
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js')
+          .then(reg => console.log('SW registered:', reg.scope))
+          .catch(err => console.log('SW registration failed:', err));
+      });
+    }
+  </script>
 </body>
 
 </html>
