perf: optimize index.html with critical CSS and loading skeleton
- Replace Tailwind CDN with critical inline CSS for faster FCP
- Add loading skeleton with animated logo for better UX
- Optimize Google Identity Services loading (lazy load in AuthPage)
- Update manifest.json with separate maskable icon
- Add postcss config for Tailwind CSS
- Add public assets (favicon, robots.txt)
- Fix accessibility: h3 -> h2 for AI insights section

--- a/index.html
+++ b/index.html
@@ -355,57 +355,11 @@
   <!-- Main app bundle -->
   <script type="module" src="/index.tsx"></script>
 
-  <!-- Non-critical: Tailwind CDN loaded async (for dev, production uses compiled CSS) -->
-  <script>
-    // Only load Tailwind CDN in development
-    if (import.meta?.env?.DEV !== false) {
-      const tw = document.createElement('script');
-      tw.src = 'https://cdn.tailwindcss.com';
-      tw.onload = function () {
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                brand: {
-                  50: '#fff1f2', 100: '#ffe4e6', 200: '#fecdd3', 300: '#fda4af',
-                  400: '#fb7185', 500: '#f43f5e', 600: '#e11d48', 700: '#be123c', 900: '#881337',
-                },
-              },
-              fontFamily: { sans: ['Outfit', 'sans-serif'] },
-              boxShadow: {
-                'subtle': '0 1px 2px 0 rgba(0, 0, 0, 0.05)',
-                'elevation': '0 10px 40px -10px rgba(0, 0, 0, 0.05)',
-              },
-              animation: {
-                'fade-in': 'fadeIn 0.5s ease-out forwards',
-                'slide-up': 'slideUpFade 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards',
-                'scale-in': 'scaleIn 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards',
-                'modal-slide-up': 'modalSlideUp 0.5s cubic-bezier(0.16, 1, 0.3, 1) forwards',
-              },
-              keyframes: {
-                fadeIn: { 'from': { opacity: '0' }, 'to': { opacity: '1' } },
-                slideUpFade: { 'from': { transform: 'translateY(10px)', opacity: '0' }, 'to': { transform: 'translateY(0)', opacity: '1' } },
-                scaleIn: { 'from': { transform: 'scale(0.95)', opacity: '0' }, 'to': { transform: 'scale(1)', opacity: '1' } },
-                modalSlideUp: { 'from': { transform: 'translateY(20px) scale(0.95)', opacity: '0' }, 'to': { transform: 'translateY(0) scale(1)', opacity: '1' } },
-              }
-            }
-          }
-        };
-      };
-      document.head.appendChild(tw);
-    }
-  </script>
-
-  <!-- Google Sign-In: loaded async, non-blocking -->
-  <script async defer src="https://accounts.google.com/gsi/client"></script>
-
   <!-- Service Worker registration -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js')
-          .then(reg => console.log('SW registered:', reg.scope))
-          .catch(err => console.log('SW registration failed:', err));
+        navigator.serviceWorker.register('/sw.js');
       });
     }
   </script>
